Fix overlap navbar

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,12 +25,13 @@ body {
 	position: fixed; /* Set the navbar to fixed position */
 	top: 0; /* Position the navbar at the top of the page */
 	width: 100%; /* Full width */
+	margin:top:149px
 }
 
 ul {
 	list-style-type: none;
 	display: inline-block;
-	 margin: 10;
+	 margin: 0;
 	 padding: 0;
 	 overflow: hidden;
 }
